# gnu_cmake

./: CMakeLists.txt  README.md
binutils-2.32/: CMakeLists.txt  bfd-config.h.in  binutils-config.h.in  gas-config.h.in  gold-config.h.in  gprof-config.h.in  gstdint.h  ld-config.h.in  libiberty-config.h.in  mktarget.sh.in  opcodes-config.h.in
cmake-modules/: CheckASMSourceCompiles.cmake  CommonChecks.cmake  GCCChecks.cmake  ICONVChecks.cmake  UtilityFunctions.cmake  gccAttributes.cmake
gcc-9.2.0/: CMakeLists.txt  configargs.h  gcc-config.h.in  gcc-driver-name.h  gtyp-input-linux.list  gtyp-input-win.list  libbacktrace-config.h.in  libcpp-config.h.in  libdecnumber-config.h.in  libgcc-config.h.in  libgcc-win.map  libgomp-config.h.in  libquadmath-config.h.in  libssp-config.h.in  libstdc++-config.h.in  multilib.h
gmp-6.1.2/: CMakeLists.txt  gmp-config.h.in  m4-config.in
isl-0.21/: CMakeLists.txt  isl-config.h.in
isl-0.21/include/isl/: stdint.h
libiconv-1.16/: CMakeLists.txt  check-stateful.sh.in  check-stateless.sh.in  check-subst.sh.in  check-translit.sh.in  check-translitfailure.sh.in  libiconv-config.h.in
mingw-w64-6.0.0/: CMakeLists.txt  mingw-config.h.in
mingw-w64-6.0.0/mingw-w64-crt/: CMakelists.txt  libm_dummy.c
mingw-w64-6.0.0/mingw-w64-headers/: CMakeLists.txt
mingw-w64-6.0.0/mingw-w64-libraries/libmangle/: libmangle-config.h.in
mingw-w64-6.0.0/mingw-w64-libraries/pseh/: CMakeLists.txt
mingw-w64-6.0.0/mingw-w64-libraries/winpthreads/: CMakeLists.txt  winpthreads-config.h.in
mingw-w64-6.0.0/mingw-w64-libraries/winstorecompat/: CMakeLists.txt
mingw-w64-6.0.0/mingw-w64-tools/gendef/: CMakelists.txt  gendef-config.h.in
mingw-w64-6.0.0/mingw-w64-tools/genidl/: CMakelists.txt  genidl-config.h.in
mingw-w64-6.0.0/mingw-w64-tools/genlib/: CMakeLists.txt  genlib-config.h.in
mpc-1.1.0/: CMakeLists.txt  mpc-config.h.in
mpfr-4.0.2/: CMakeLists.txt  mpfr-config.h.in
zlib-1.2.11/: CMakeLists.txt
